src/test/fun-test/semantic/ReturnStrictCast.java.err
Semantic error: incompatible types: INT required, got DOUBLE, line 2, pos 24
