src/test/fun-test/semantic/ReturnStrictCast.java
class Main {
    int foo() { return 0.E1; }
    void main() {}
}